--- a/CSharp/09. ASP.NET MVC/MVCTemplate/Web/MvcTemplate.Web/Views/Home/Index.cshtml
+++ b/CSharp/09. ASP.NET MVC/MVCTemplate/Web/MvcTemplate.Web/Views/Home/Index.cshtml
@@ -6,6 +6,13 @@
     @DateTime.Now;
 </div>
 
+@for (int i = 0; i < 10; i++)
+{
+<div>
+    @i
+</div>
+}
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
