Server Task Done! Adding cats implemented! Data base is updating successfully!

--- a/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/MyOnlyCatServer/Views/Cats/Details.cshtml
+++ b/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/MyOnlyCatServer/Views/Cats/Details.cshtml
@@ -2,6 +2,10 @@
 
 @model Cat
 
+@{ 
+    ViewData["Title"] = "Details";
+}
+
 <h2>@Model.Name</h2>
 
 <img src="@Model.ImageUrl" alt="NO Idea what this is @Model.Name" />
