Encountered a problem - app is not starting

--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Manage/_ManageNav.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
 ﻿@using CarDealer.Web.Views.Manage
+@using CarDealer.Data.Models
+
 @inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
