--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Account/Login.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @using System.Linq
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+@using CarDealer.Data.Models
 @model LoginViewModel
 @inject SignInManager<User> SignInManager
 
