--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using CarDealer.Web.Models
 @using CarDealer.Web.Models.AccountViewModels
 @using CarDealer.Web.Models.ManageViewModels
+@using CarDealer.Data.Models
+@using CarDealer.Services.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
