--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using CarDealer.Web.Models.ManageViewModels
 @using CarDealer.Data.Models
 @using CarDealer.Services.Models
+@using CarDealer.Web.Models.Customers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
