--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using CarDealer.Data.Models
 @using CarDealer.Services.Models
 @using CarDealer.Web.Models.Customers
+@using CarDealer.Web.Models.Cars
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
