--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -7,4 +7,6 @@
 @using CarDealer.Services.Models
 @using CarDealer.Web.Models.Customers
 @using CarDealer.Web.Models.Cars
+@using CarDealer.Web.Models.Suppliers
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
