--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using CarDealer.Web.Models.Customers
 @using CarDealer.Web.Models.Cars
 @using CarDealer.Web.Models.Suppliers
+@using CarDealer.Services.Models.Cars
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
