--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 @using CarDealer.Web
 @using CarDealer.Web.Models
+@using CarDealer.Services.Models.Customers
 @using CarDealer.Web.Models.AccountViewModels
 @using CarDealer.Web.Models.ManageViewModels
 @using CarDealer.Data.Models
