--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Customers/TotalSales.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Customers/TotalSales.cshtml
@@ -7,3 +7,11 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    @Model.Boughtcars.Count() Cars Bought
+</p>
+
+<p>
+    $@Model.TotalMoneySpent.ToString("F2")
+</p>
+
