In _ViewImports.cshtml Added the correct using @using CarDealer.Services(..).Sales

--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -10,5 +10,6 @@
 @using CarDealer.Web.Models.Cars
 @using CarDealer.Web.Models.Suppliers
 @using CarDealer.Services.Models.Cars
+@using CarDealer.Services.Models.Sales
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
