--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/All.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/All.cshtml
@@ -1,7 +1,62 @@
-﻿
+﻿@model IEnumerable<SaleListModel>
+
+
 @{
-    ViewData["Title"] = "All";
+    ViewData["Title"] = "All Sales";
 }
 
-<h2>All</h2>
+<h2>@ViewData["Title"]</h2>
 
+<table class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <td>
+                Customer
+
+            </td>
+        
+        
+            <td>
+                Discount
+
+            </td>
+        
+        
+            <td>
+                Price
+                    
+            </td>
+        
+        
+            <td>
+                Discounted Price
+
+            </td>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var sale in Model)
+        {
+            <tr>
+                <td>
+                    @sale.CustomerName
+                </td>
+          
+           
+                <td>
+                    @(sale.Discount + (sale.IsYoungDriver ? 0.05 : 0))
+                </td>
+           
+            
+                <td>
+                    @sale.Price.ToString("F2")
+                </td>
+            
+            
+                <td>
+                    @sale.DiscountedPrice.ToString("F2")
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
