Sale more Details added
Implementation completed

View Details added

--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/All.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/All.cshtml
@@ -44,7 +44,7 @@
 
 
                 <td>
-                    @(sale.Discount + (sale.IsYoungDriver ? 0.05 : 0))
+                    @(sale.Discount + (sale.IsYoungDriver ? 0.05 : 0))%
                 </td>
 
 
@@ -55,6 +55,9 @@
 
                 <td>
                     @sale.DiscountedPrice.ToString("F2")
+                </td>
+                <td class="text-center">
+                    <a class="btn btn-sm btn-default" href="/sales/@sale.Id">More Details</a>
                 </td>
             </tr>
         }
