StringExtensions.cs added for the repeatable code in the views Details completed

--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/Details.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/Details.cshtml
@@ -9,6 +9,12 @@
 <h3>@Model.CustomerName</h3>
 
 <p>
-    @Model.Discount%
+    @Model.Discount.ToPercentage()
+</p>
+<p>
+    @Model.DiscountedPrice.ToPrice()
+</p>
+<p>
+    @Model.Car.Make @Model.Car.Model - @(Model.Car.TravelledDistance / 1000)KM
 </p>
 
