--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -11,5 +11,6 @@
 @using CarDealer.Web.Models.Suppliers
 @using CarDealer.Services.Models.Cars
 @using CarDealer.Services.Models.Sales
+@using CarDealer.Web.Infrastructure.Extensions
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
