--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/All.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Sales/All.cshtml
@@ -44,7 +44,7 @@
 
 
                 <td>
-                    @(sale.Discount + (sale.IsYoungDriver ? 0.05 : 0))%
+                    @(sale.Discount + (sale.IsYoungDriver ? 0.05 : 0).ToString("F2"))%
                 </td>
 
 
