--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Customers/Edit.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Customers/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model CustomerFormModel
 
-
 @{
-    ViewData["Title"] = "Add Customer";
+    ViewData["Title"] = "Edit Customer";
 }
 
-<h2>Add Create</h2>
+<h2>@ViewData["Title"]</h2>
+
 
 <div class="row">
     <div class="col-md-4">
