--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Customers/_CustomerForm.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Customers/_CustomerForm.cshtml
@@ -2,7 +2,7 @@
 
     <form method="post">
         <div class="form-group">
-            <label asp-for="Name">Name</label>
+            <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control">
             <span asp-validation-for="Name" class="form-text text-danger"></span>
         </div>
