--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Shared/_Layout.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Shared/_Layout.cshtml
@@ -43,6 +43,8 @@
                     </li>
                     <li><a href="/sales">Sales</a></li>
                     <li><a href="/cars/parts">Cars</a></li>
+                    <li><a href="/parts/all">Parts</a></li>
+
 
 
 
