--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Parts/All.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Parts/All.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PartListingModel>
+﻿@model PartPageListingModel
 
 @{
     ViewData["Title"] = "All Parts";
@@ -6,25 +6,43 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<ul class="pagination">
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">«</span>
+            <span class="sr-only">Previous</span>
+        </a>
+    </li> 
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">»</span>
+            <span class="sr-only">Next</span>
+        </a>
+    </li>
+</ul>
+
 <table class="table table-bordered table-hover">
     <thead>
-         <tr>
-             <th>
-                  Name
-             </th>
-             <th>
-                 Price
-             </th>
-             <th>
-                 Quantity
-             </th>
-             <th>
-                 Supplier
-             </th>
-         </tr>
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                Price
+            </th>
+            <th>
+                Quantity
+            </th>
+            <th>
+                Supplier
+            </th>
+        </tr>
     </thead>
     <tbody>
-        @foreach (var part in Model)
+        @foreach (var part in Model.Parts)
         {
             <tr>
                 <th>
@@ -43,4 +61,3 @@
         }
     </tbody>
 </table>
-
