--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/_ViewImports.cshtml
@@ -13,5 +13,6 @@
 @using CarDealer.Services.Models.Sales
 @using CarDealer.Web.Infrastructure.Extensions
 @using CarDealer.Services.Models.Parts
+@using CarDealer.Web.Models.Parts
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
