--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Parts/All.cshtml
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/Views/Parts/All.cshtml
@@ -6,18 +6,26 @@
 
 <h2>@ViewData["Title"]</h2>
 
+@{ 
+    var previousPageDisabled = Model.CurrentPage == 1 ? "disabled" : string.Empty;
+    var nextPageDisabled = Model.CurrentPage == Model.TotalPages ? "disabled" : string.Empty;
+}
+
 <ul class="pagination">
-    <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
+    <li class="page-item @previousPageDisabled">
+        <a class="page-link @previousPageDisabled" href="/parts/all?page=@(Model.PreviousPage)" aria-label="Previous">
             <span aria-hidden="true">«</span>
             <span class="sr-only">Previous</span>
         </a>
-    </li> 
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
+    </li>
+
+    @for (int i = 1; i <= Model.TotalPages; i++)
+    {
+        <li class="page-item @(Model.CurrentPage == i ? "active" : string.Empty)"><a class="page-link" href="/parts/all?page=@i">@i</a></li>
+
+    }
+    <li class="page-item @nextPageDisabled">
+        <a class="page-link @nextPageDisabled" href="/parts/all?page=@(Model.NextPage)" aria-label="Next">
             <span aria-hidden="true">»</span>
             <span class="sr-only">Next</span>
         </a>
