--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/wwwroot/css/site.css
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/wwwroot/css/site.css
@@ -26,6 +26,10 @@
     margin: 15px;
 }
 
+a.disabled {
+    pointer-events: none;
+}
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
